# p2p-chat

./: .gitignore  Makefile  README.md  pyproject.toml
chat_peer/: main.py  pyproject.toml
chat_peer/cache/: cache_model.py
chat_peer/chat/: chat_model.py  chat_schema.py
chat_peer/infra/: logger.py
chat_peer/libs/: crypto.py  message.py  peer.py
chat_peer/src/chat_peer/: main.py  main.tcss
chat_peer/src/chat_peer/cache/: memory_record_cache.py
chat_peer/src/chat_peer/chat/: chat_model.py
chat_peer/src/chat_peer/libs/: group.py  peer.py
chat_peer/tests/: test_chat_peer_bench.py
common/: pyproject.toml
common/adapters/: tcp_adapter.py  udp_adapter.py
common/src/common/utils/: requests.py  router.py  tcp_socket.py  udp_socket.py
common/utils/: responses.py  router.py
dns_client/: __init__.py  pyproject.toml
dns_client/client/: cache_model.py  dns_client.py
dns_client/src/dns_client/: __init__.py
dns_client/src/dns_client/client/: dns_client.py  record_cache.py
dns_server/: main.py  pyproject.toml
dns_server/libs/: record.py
dns_server/registry/: registry_controller.py  registry_model.py  registry_schema.py
dns_server/src/dns_server/: main.py
dns_server/src/dns_server/libs/: record.py
dns_server/src/dns_server/registry/: registry_controller.py  registry_model.py  registry_schema.py
dns_server/tests/: test_dns_server_bench.py
docs/puml/chat-peer/: architecture.puml
docs/puml/dns-client/: architecture.puml
docs/puml/dns-server/: architecture.puml
docs/puml/global/: architecture.puml  flow-chat-peer.puml  flow-dns.puml
(+5 files in other folders)
